<resources>
    <string name="app_name">ByTheWay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt_toolbar">Toolbar</string>
    <string name="txt_floating_action_button">FloatActionButton</string>
    <string name="txt_navigation_view">NavigationView</string>
    <string name="txt_other">Other</string>
    <string name="title_activity_code_lab">CodeLabActivity</string>
    <string name="InputPasswd">输入您的密码</string>
    <string name="InputUsernm">输入您的用户名</string>
    <string name="Register">注册账号</string>
    <string name="Forget">忘记密码</string>
    <string name="Login">登录</string>
    <string name="LoginTitle">登录账户</string>
    <string name="exit">退出</string>
    <string name="app_version">1.0</string>
    <string name="feedback">反馈</string>
    <string name="feedback_info">通过Github Issue向我们反馈</string>
    <string name="authors">开发者</string>
    <string name="change_data">修改资料</string>
    <string name="no_data_available">附件没有合适的订单\n下拉可以刷新</string>
    <string name="function_not_open">此功能正在施工中</string>
</resources>
